// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Login Page 1`] = `
<div>
  <h1>
    Login in with Google
  </h1>
  <button>
    Login
  </button>
</div>
`;

exports[`should startLogin on button click 1`] = `
<div>
  <h1>
    Login in with Google
  </h1>
  <button
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    Login
  </button>
</div>
`;
